--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/logo.png" alt=""></a>
+              <a class="navbar-brand zoom" href="../index.html"><img src="../assets/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -87,13 +87,13 @@
                 </p>
                 <div class="row">
                   <div class="col">
-                    <a href=""><img src="../assets/fb.svg" alt="Facebook"></a> 
+                    <a href="https://www.facebook.com/" target="_blank"><img class="zoom" src="../assets/fb.svg" alt="Facebook"></a> 
                   </div>
                   <div class="col">
-                    <a href=""><img src="../assets/ig.svg" alt="Instagram"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img class="zoom" src="../assets/ig.svg" alt="Instagram"></a>
                   </div>
                   <div class="col">
-                    <a href="" ><img src="../assets/whatsapp.svg" alt="whatsapp"></a>
+                    <a href="https://web.whatsapp.com/" target="_blank" ><img class="zoom" src="../assets/whatsapp.svg" alt="whatsapp"></a>
                   </div>
                 </div>
             </div>
