--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/logo.png" alt=""></a>
+              <a class="navbar-brand zoom" href="../index.html"><img src="../assets/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
