--- a/pages/productos.html
+++ b/pages/productos.html
@@ -50,6 +50,9 @@
                       <div class="card-body">
                         <h5 class="card-title text-center ">Tortas Clasicas</h5>
                         <p class="card-text">Las tortas clásicas son una delicia tradicional, con sabores caseros e ingredientes frescos. Suelen ser de capas con rellenos de dulce de leche, frutas, crema pastelera o chocolate. Son ideales para celebraciones o eventos especiales, recordando siempre los momentos felices.</p>
+                        <div class="text-center">
+                          <button id="btn1" class="btn btn-primary"> Agregar a carrito</button>
+                        </div>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card align-items-center " style="width: 18rem;">
@@ -57,6 +60,9 @@
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas de Diseño</h5>
                         <p class="card-text">Las tortas de diseño son una obra maestra culinaria, con detalles impresionantes y creativos. Son perfectas para ocasiones especiales, con diseños únicos y personalizados. Desde temáticas de películas, personajes, animales hasta diseños abstractos, las tortas de diseño son una delicia para los ojos y el paladar.</p>
+                        <div class="text-center">
+                          <button id="btn2" class="btn btn-primary"> Agregar a carrito</button>
+                        </div>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card align-items-center" style="width: 18rem;">
@@ -64,6 +70,9 @@
                       <div class="card-body">
                         <h5 class="card-title text-center">Galletitas</h5>
                         <p class="card-text">Las galletitas caseras son una delicia perfecta para eventos, ya sea en una reunión familiar, una fiesta de cumpleaños, una boda o cualquier otra ocasión especial. Su sabor único y su presentación atractiva las convierten en una opción ideal para complementar la decoración del evento y ofrecer una deliciosa merienda. Además, su preparación casera las hace ideales para eventos temáticos y personalizados.</p>
+                        <div class="text-center">
+                          <button id="btn3" class="btn btn-primary"> Agregar a carrito</button>
+                        </div>
                       </div>
                     </div>
                 </div>
@@ -73,6 +82,7 @@
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
     </footer>
+    <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
